--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,18 +7,38 @@ app.loginTimeoutSecs=600
 spring.profiles.active=default
 
 #######################################################
-#### database  settings For MYSQL
+#### database settings For MYSQL
 ########################################################
 #spring.jpa.database=MYSQL
 #spring.datasource.driverClassName=net.sf.log4jdbc.DriverSpy
 #spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/xk?useUnicode=true&characterEncoding=utf-8&useSSL=true
 #spring.datasource.username=root
 #spring.datasource.password=root
-spring.jpa.database=MYSQL
+
+
+#######################################################
+#### database settings For MemSQL
+########################################################
+spring.datasource.gp.driverClassName=net.sf.log4jdbc.DriverSpy
+spring.datasource.gp.url=jdbc:log4jdbc:mysql://192.168.9.197:13306/testdb?useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.gp.username=root
+spring.datasource.gp.password=
+
+
+#######################################################
+#### database settings For GP
+########################################################
 spring.datasource.driverClassName=net.sf.log4jdbc.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mysql://192.168.9.197:13306/testdb?useUnicode=true&characterEncoding=utf-8&useSSL=true
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://192.168.9.234:5432/jafjdb?characterEncoding=utf8
+#####jdbc:log4jdbc:mysql://localhost:3306/xk?useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.username=gpadmin
+spring.datasource.password=gpadmin
+
+
+
+#######################################################
+#### database settings For PostgreSQL
+########################################################
 #spring.jpa.database=POSTGRESQL
 #spring.datasource.driverClassName=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://192.168.195.200/xk
@@ -35,7 +55,7 @@ spring.jpa.show-sql=true
 ########################################################
 mybatis.config-locations=classpath:mybatis/mybatis-config.xml
 ### 这个配置去掉是因为security和common里面重复commpanyInfo
-mybatis.mapper-locations=classpath:mybatis/mapper/*Mapper.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/gp/*Mapper.xml
 mybatis.mapper.basepackage=com.xk.*.mapper
 
 
