--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
 		</dependency>
 
 
+		<!-- gp依赖-->
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.1-901.jdbc4</version>
+		</dependency>
+
 
 	</dependencies>
 
